--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "context/authContext.js"  ]
+, "context/authContext.js", "app/signUp.js", "app/signIn.js", "components/CustomKeyboardAdvoidingView.js"  ]
 }
