--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.23",
     "expo-font": "~11.4.0",
@@ -23,6 +24,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.11.1",
     "lottie-react-native": "^6.7.2",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
@@ -34,8 +36,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.4.3",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
