--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.1.17",
-    "expo": "~49.0.23",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^51.0.9",
+    "expo-font": "~12.0.6",
+    "expo-image": "~1.12.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^10.11.1",
-    "lottie-react-native": "^5.1.6",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.3"
   },
@@ -45,9 +45,9 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "overrides": {
     "react-refresh": "~0.14.0"
